--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>🏰 Disney World Vacation Countdown 🎉</h1>
     
     <div id="countdown">
-      <h2>Time Until Magic:</h2>
+      <h2>Time Until The Magic</h2>
       <p id="timer">-- Days -- Hours -- Minutes -- Seconds</p>
     </div>
   </div>
