--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 </head>
 <body>
   <div class="container">
-    <h1>🏰 Disney World Vacation Countdown 🎉</h1>
+      <div class="image-row">
+    <img src="charlotte.jpg" alt="Castle" />
+    <img src="rocco.jpg" alt="Mickey" />
+    <img src="luke.jpg" alt="Fireworks" />
+    <img src="lola.jpg" alt="Fireworks" />
+    <img src="travis.jpg" alt="Fireworks" />
+    <img src="taz.jpg" alt="Fireworks" />
+  </div>
+    
+    <h1>Disney World Vacation Countdown</h1>
     
     <div id="countdown">
       <h2>Time Until The Magic</h2>
