--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <div class="container">
       <div class="image-row">
-    <img src="charlotte.jpg" alt="Castle" />
-    <img src="rocco.jpg" alt="Mickey" />
-    <img src="luke.jpg" alt="Fireworks" />
-    <img src="lola.jpg" alt="Fireworks" />
-    <img src="travis.jpg" alt="Fireworks" />
-    <img src="taz.jpg" alt="Fireworks" />
+    <img src="charlotte.jpg" alt="Charlotte" />
+    <img src="rocco.jpg" alt="Rocco" />
+    <img src="luke.jpg" alt="Luke" />
+    <img src="lola.jpg" alt="Lola" />
+    <img src="travis.jpg" alt="Travis" />
+    <img src="taz.jpg" alt="Taz" />
   </div>
     
     <h1>Disney World Vacation Countdown</h1>
