--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
   <div class="container">
       <div class="image-row">
-    <img src="charlotte.jpg" alt="Charlotte" />
-    <img src="rocco.jpg" alt="Rocco" />
-    <img src="luke.jpg" alt="Luke" />
-    <img src="lola.jpg" alt="Lola" />
-    <img src="travis.jpg" alt="Travis" />
-    <img src="taz.jpg" alt="Taz" />
+    <img src="charlotte.jpg" alt="Charlotte" class="icon-img" />
+    <img src="rocco.jpg" alt="Rocco" class="icon-img" />
+    <img src="luke.jpg" alt="Luke" class="icon-img" />
+    <img src="lola.jpg" alt="Lola" class="icon-img" />
+    <img src="travis.jpg" alt="Travis" class="icon-img" />
+    <img src="taz.jpg" alt="Taz" class="icon-img"  />
   </div>
     
     <h1>Disney World Vacation Countdown</h1>
