--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
     
     <h1>Disney World Vacation Countdown</h1>
-    
+ <a href="itinerary.html" class="button-link">📅 View Trip Itinerary</a>   
     <div id="countdown">
       <h2>Time Until The Magic</h2>
       <p id="timer">-- Days -- Hours -- Minutes -- Seconds</p>
